--- a/exercises/06-rmd-find-errors/06-rmd-find-errors.Rmd
+++ b/exercises/06-rmd-find-errors/06-rmd-find-errors.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE,
                       dev = "png"})
 ```
 
-```{r library, echo = }
+```{r library, eval = FALSE}
 
 library(tidyverses)
 
