--- a/exercises/05-rmd-bib-polish/05-rmd-bib-polish.qmd
+++ b/exercises/05-rmd-bib-polish/05-rmd-bib-polish.qmd
@@ -1,25 +1,27 @@
 ---
-title: "03-rmd-lm-tables-inline-eqn"
-author: "Your Name"
-date: 2017/06/27
-output: 
-  html_document:
-    keep_md: true
+title: "05-rmd-bib-polish"
+format: html
 ---
+
+```{r setup}
+
+knitr::opts_chunk$set(echo = FALSE,
+                      fig.height = 3,
+                      fig.width = 4,
+                      dev = "png")
+```
+
 
 # Tasks
 
-  - fit a linear model of Ozone ~ Temp + Wind + Solar.R 
-    - (hint: use `lm`)
-  - Make a table of the coefficients from the linear model 
-    - (hint: use `coef` and `knitr::kable`)
-  - Make some inline code chunks that describe the single values of the R-squared or a coefficient
-  - Make an equation describing the relationship
-
+- Cite the packages you use when you use them
+  - hint: http://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html
+  - hint: look at the names in packages.bib
+- Tidy up the structure, provide some more words around the introduction and results
 
 # Introduction
 
-This is a simple analysis of the New York Air Quality Measurements using the R statistical programming language. As stated in the helpfile `?airquality`, this dataset contains:
+This is a simple analysis of the New York Air Quality Measurements using the R statistical programming language (CITATION PLEASE!). As stated in the helpfile `?airquality`, this dataset contains:
 
 > Daily air quality measurements in New York, May to September 1973.
 
@@ -37,6 +39,19 @@ It contains the following variables
 - Day: Day of month (1--31)
 
 We are going to explore the relationship between solar radiation and other selected variables, solar radiation, wind, and temperature.
+
+# Method
+
+```{r lm-fit}
+
+lm_fit <- lm(Ozone ~ Solar.R + Temp + Wind, 
+             data = airquality)
+
+```
+
+$$
+Ozone \sim \beta_0 + \beta_1Solar.R + \beta_2 Wind + \beta_3Temp + \epsilon
+$$
 
 # Results
 
@@ -62,3 +77,12 @@ ggplot(airquality,
 
 ```
 
+We use the knitr package to make a table - CITATION NEEDED!
+
+```{r print-coef-table}
+
+knitr::kable(coef(lm_fit))
+
+```
+
+# References
