--- a/cite-fig-tab-sec.qmd
+++ b/cite-fig-tab-sec.qmd
@@ -2,13 +2,19 @@
 
 When you're writing a report, you often refer to a table or figure in text. 
 
-```{r no-show, include = FALSE, message = FALSE}
+```{r}
+#| label: no-show
+#| include: false
+#| message: false
 gapminder <- readr::read_csv(here::here("data", "gapminder.csv"))
 ```
 
 > Australia's life expectancy has increased a great deal over the past 50 years (Figure 1)
 
-```{r example-gg-oz-gap, echo = FALSE, message = FALSE}
+```{r}
+#| label: example-gg-oz-gap
+#| echo: false
+#| message: false
 library(ggplot2)
 library(dplyr)
 gapminder %>%
@@ -107,7 +113,11 @@ Australia's life expectancy has increased a great deal over the past 50 years
 
 ````
 
-```{r gg-oz-plot, fig.cap = "Life expectancy from 1952 - 2007 for Australia. Life expectancy increases steadily except from 1962 to 1969. We can safely say that our life expectancy is higher than it has ever been!"}
+```{r}
+#| label: gg-oz-plot
+#| fig-cap: Life expectancy from 1952 - 2007 for Australia. Life expectancy increases
+#|   steadily except from 1962 to 1969. We can safely say that our life expectancy is
+#|   higher than it has ever been!
 library(ggplot2)
 library(dplyr)
 gapminder %>%
@@ -139,7 +149,8 @@ gapminder %>%
 
 We can see below in Table \@ref(tab:gg-oz-tab) the raw data used to create Figure \@ref(fig:gg-oz-plot)).
 
-```{r gg-oz-tab}
+```{r}
+#| label: gg-oz-tab
 gapminder %>%
   filter(country == "Australia") %>%
   knitr::kable(caption = "Raw gapminder data for Australia.")
