--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 # About this {-}
 
-This is a book on quarto, aimed for scientists. It was initially developed as a 3 hour workshop, but is now developed into a resource that will grow and change over time as a **living book**.
+This is a book on quarto, aimed for scientists. It was initially developed as a 3 hour workshop, "Rmarkdown for scientists". It has been updated to use quarto, which is a more updated and modern take on rmarkdown. It is now developed into a resource that will grow and change over time as a **living book**.
 
 This book aims to teach the following:
 
@@ -34,17 +34,30 @@ This book aims to teach the following:
 
 This book started out its first life being around rmarkdown. There are many great books on R Markdown and it's various features, such as ["Rmarkdown: The definitive guide"](https://bookdown.org/yihui/rmarkdown/), ["bookdown: Authoring Books and Technical Documents with R Markdown"](https://bookdown.org/yihui/bookdown/), and ["Dynamic Documents with R and knitr, Second edition"](https://www.crcpress.com/Dynamic-Documents-with-R-and-knitr/Xie/p/book/9781498716963), and Yihui Xie's thesis, ["Dynamic Graphics and Reporting for Statistics"](https://lib.dr.iastate.edu/etd/13518/).
 
-> So why write a book?
+With the [release of quarto](), I wanted to translate the materials I developed in "Rmarkdown for scientists" to cover the same material. There are other excellent resources for learning quarto:
 
-Good question. The answer is that writing this as a book provides a way for me to structure the content in the form of a workshop, in a way suitable for learning in a few hours. 
+- [The quarto "get started" guide](https://quarto.org/docs/get-started/hello/rstudio.html)
+- [The quarto guide "quarto manuscripts"](https://quarto.org/docs/manuscripts/)
+- [The quarto chapter in "R for data science"](https://r4ds.hadley.nz/quarto)
+- [Making shareable documents with quarto from](https://openscapes.github.io/quarto-website-tutorial/), from OpenScapes
+- [Alison Hill's blog post: "we don't talk about quarto"](https://www.apreshill.com/blog/2022-04-we-dont-talk-about-quarto/)
+- [Mine Çentinkaya-Rundel's talk "Quarto for academics"](https://quarto.org/docs/blog/posts/2023-05-22-quarto-for-academics/)
+
+While the quarto guide is extensive, and indeed their "quarto manuscripts" guide covers a lot of the ground in this book. 
+
+> So, why write a book?
+
+Good question. The answer is that writing this as a book provides a nice way to structure the content in the form of a workshop, in a way suitable for learning in a few hours. It is not to say that there aren't already great resources out there; there are. It is instead adding to the list of other useful information out there on the internet. I considered the Rmarkdown for Scientsts book and course a success, and it helped myself and others understand and better use rmarkdown. So I guess, to answer a question with another question:
+
+> Why NOT write this as a book?
 
 ## How to use this book
 
-This book was written to provide course materials for a 3 hour course on R Markdown.
+This book was written to provide course materials for a 3 hour course on Quarto
 
 We worked through the following sections in the book in 3 hours:
 
-- [Why use R Markdown](why-rmd)
+- [Why use Quarto](why-qmd)
 - [Installation](installation)
 - [what is RStudio?](rstudio)
 - [suggested workflow and hygiene](workflow)
@@ -66,13 +79,16 @@ With the remaining sections being used as extra material, or have since been wri
 
 Course materials can be downloaded by using the following command from the `usethis` package:
 
-```{r use-course, echo = TRUE, eval = FALSE}
+```{r}
+#| label: use-course
+#| echo: true
+#| eval: false
 usethis::use_course("bit.ly/qmd4sci-materials")
 ```
 
 ## Where has this course been taught?
 
-So far I have taught the rmarkdown for science course at the following locations:
+The quarto for scientists for course has not been taught yet, but the rmarkdown for scientists course, upon which this book is based, has been taught at the following locations:
 
 - 2018
   - Melbourne, November for SSA Victoria
@@ -83,7 +99,6 @@ So far I have taught the rmarkdown for science course at the following locations
   - Melbourne, December, for Plant Pathology Conference
 - 2020
   - Seattle, February, for the University of Washington
-
 
 ## Licence
 
