--- a/pdf-html-word.qmd
+++ b/pdf-html-word.qmd
@@ -23,7 +23,10 @@ Here are three ways to do this:
 
 1. You can control this in the "knit" button
 
-```{r knit-screenshot, eval = TRUE, echo = FALSE}
+```{r}
+#| label: knit-screenshot
+#| eval: true
+#| echo: false
 knitr::include_graphics("figs/rstudio-knit-button.png")
 ```
 
@@ -50,7 +53,9 @@ And if we remember from the previous lesson, the information in the YAML is pass
 
 3. You can call the `render` function.
 
-```{r rmd-render, eval = FALSE}
+```{r}
+#| label: rmd-render
+#| eval: false
 rmarkdown::render("example.Rmd", output_format = "html_document")
 rmarkdown::render("example.Rmd", output_format = "pdf_document")
 rmarkdown::render("example.Rmd", output_format = "word_document")
